[tool.poetry]
name = "blog-project"
version = "0.1.0"
description = "Production-ready FastAPI Blog API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "blog_project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.122.0"}
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.11"
uvicorn = "^0.38.0"
pydantic-settings = "^2.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
